DockerVersion/src/main/java/com/example/dockerversion/error/PackageSavedException.java
package com.example.dockerversion.error;

public class PackageSavedException extends RuntimeException{
    public PackageSavedException() {
        super("Packet didn't save!");
    }
}

